--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = bot-community
+name = WebSearch
 version = 0.0.1
 author = ITEAMS
-author_email = contact@iteams.mg
+author_email = contact@iteam-s.xyz
 description = Module python permettant de faire différent recherche sur le Web.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/iteams
+url = https://github.com/iTeam-S/WebSearch
 project_urls =
-    Bug Tracker = https://github.com/iteams/issues
+    Bug Tracker = https://github.com/iTeam-S/WebSearch/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
