--- a/.github/workflows/pip-upload.yml
+++ b/.github/workflows/pip-upload.yml
@@ -1,5 +1,7 @@
 name: Publish
 on:
+  push:
+    branches: [ main ]
   release:
     types: # This configuration does not affect the page_build event above
       - created
