--- a/.github/workflows/pip-upload.yml
+++ b/.github/workflows/pip-upload.yml
@@ -9,9 +9,26 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - name: Publish a Python distribution to PyPI
-      uses: ortega2247/pypi-upload-action@master
-      with:
-        user: __token__
-        password: ${{ secrets.PIP_TOKEN }}
-        packages_dir: websearch
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Sets up python
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      # Install dependencies
+      - name: "Installs dependencies"
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install setuptools wheel twine
+
+      # Build and upload to PyPI
+      - name: "Builds and uploads to PyPI"
+        run: |
+          python3 setup.py sdist bdist_wheel
+          python3 -m twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PIP_TOKEN }}
+      
