--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = WebSearch
-version = 0.0.1
-author = ITEAMS
+version = 0.1
+author = iTeam-$
 author_email = contact@iteam-s.xyz
-description = Module python permettant de faire différent recherche sur le Web.
+description = Python module allowing you to do various searches for links on the Web.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/iTeam-S/WebSearch
