--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = WebSearch
-version = 1.1.3
+version = 1.2.0-dev
 author = iTeam-$
 author_email = contact@iteam-s.xyz
 description = Python module allowing you to do various searches for links on the Web.
